--- a/GolfWear/Base.lproj/Main.storyboard
+++ b/GolfWear/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rp9-Tg-2ky">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rp9-Tg-2ky">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,6 +21,8 @@
                     <connections>
                         <segue destination="sXP-Ya-zc7" kind="relationship" relationship="viewControllers" id="PqO-VQ-Q2n"/>
                         <segue destination="wnw-PU-Lm4" kind="relationship" relationship="viewControllers" id="YFR-93-NVD"/>
+                        <segue destination="Doc-fL-WxL" kind="relationship" relationship="viewControllers" id="gxh-Xc-P7H"/>
+                        <segue destination="rqe-8K-DwJ" kind="relationship" relationship="viewControllers" id="6oe-Bd-66E"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qgT-nZ-v0B" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,7 +37,27 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="09c-Zx-m31" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-630" y="501"/>
+            <point key="canvasLocation" x="-592" y="409"/>
+        </scene>
+        <!--IchijiStoryboard-->
+        <scene sceneID="nke-OZ-j2t">
+            <objects>
+                <viewControllerPlaceholder storyboardName="IchijiStoryboard" id="rqe-8K-DwJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2Dy-lJ-j91"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f4q-Ka-Eid" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-574" y="604"/>
+        </scene>
+        <!--MyPageStoryboard-->
+        <scene sceneID="wZ9-g2-HT0">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MyPageStoryboard" id="Doc-fL-WxL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="NpE-zo-zEN"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3rN-Nh-3WA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-586" y="482"/>
         </scene>
         <!--HomeStoryboard-->
         <scene sceneID="ii9-vb-dqP">
